[package]
name = "solana_usdc_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = { version = "0.5.0-rc.3", features = ["json","tokio"] }
solana-client = "1.16"
solana-sdk = { version = "1.16", features = ["full"] }
spl-token = "3.5.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
